feat: new endpoint GET /opening-hours/default/{restaurantId}
