# src/main/java/com/mycompany/bookme/openingHour/controllers/OpeningHourController.java
@@ -4,8 +4,6 @@ import com.mycompany.bookme.api.OpeningHoursApi;
 import com.mycompany.bookme.exceptions.utils.ControllerUtils;
 import com.mycompany.bookme.model.OpeningHourDefaultCompleteRequestDTO;
 import com.mycompany.bookme.model.OpeningHourDefaultCompleteResponseDTO;
-import com.mycompany.bookme.model.OpeningHourDefaultDTO;
-import com.mycompany.bookme.model.OpeningHourDefaultRequestDTO;
 import com.mycompany.bookme.openingHour.service.OpeningHourDefaultService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -22,6 +20,16 @@ public class OpeningHourController extends ControllerUtils implements OpeningHou
     public ResponseEntity<OpeningHourDefaultCompleteResponseDTO> createOpeningHourDefault(OpeningHourDefaultCompleteRequestDTO openingHourDefaultRequestDTO) {
         return ResponseEntity.created(null)
                 .body(openingHourDefaultService.createOpeningHourDefault(openingHourDefaultRequestDTO));
+    }
+
+    @Override
+    public ResponseEntity<OpeningHourDefaultCompleteResponseDTO> updateOpeningHourDefault(OpeningHourDefaultCompleteRequestDTO openingHourDefaultCompleteRequestDTO) {
+        return ResponseEntity.ok(openingHourDefaultService.updateOpeningHourDefault(openingHourDefaultCompleteRequestDTO));
+    }
+
+    @Override
+    public ResponseEntity<OpeningHourDefaultCompleteResponseDTO> getOpeningHoursDafult(Long restaurantId) {
+        return ResponseEntity.ok(openingHourDefaultService.getOpeningHoursDafult(restaurantId));
     }
 }
 
